--- a/dbt/dbt_project.yml
+++ b/dbt/dbt_project.yml
@@ -32,5 +32,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   training_demo:
     # Config indicated by + and applies to all files under models/example/
-    +materialized: table
+    #+materialized: table
     #+schema: qianyu_training
